# Taggy-Ecoscore

./: .gitignore  README.md  [CESAR] - FDS.csv
app/back/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/back/src/: main.py
app/back/src/lib/: db.py
app/back/src/middleware/: auth.py
app/back/src/models/: __init__.py  user.py
app/back/src/routes/: __init__.py  co2.py  users.py
app/back/src/services/: co2_service.py  users.py
app/front/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/front/src/: main.tsx
app/front/src/api/: client.ts
app/front/src/api/users/: query-keys.ts  types.ts  (+1 more)
app/front/src/lib/: http-client.ts
app/front/src/routes/: __root.tsx
docs/: README.md  user-stories.md
docs/diagramas/: us02.drawio  us02.puml  us03.drawio  us03.puml  us04.puml  us05.puml  us06.drawio  us07.puml  us08.drawio  us08.puml  us09.puml  us10.drawio  us10.puml  us11.drawio  us11.puml
docs/diagramas/specs/: us01.drawio  us01.puml  us02.drawio  us02.puml  us03.drawio  us03.puml  us04.drawio  us04.puml  us05.drawio  us05.puml  us06.drawio  us06.puml  us07.drawio  us07.puml  us08-mapa.drawio  us08.drawio  us08.puml  us09.drawio  us09.puml  us10.drawio  us10.puml  us11.drawio  us11.puml
docs/negocio/: premissas-desafio.md
docs/produto/: personas.md  user-stories.md
docs/tecnico/: README.md  engine-calculo.md  engine-debitos-e-backlog.md  engine-revisao-funcoes.md  engine-visao-geral.md  guia-desenvolvedor.md
(+4 files in other folders)
